Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.2(EOL), 10.3(EOL), 10.4(EOL), 10.5(EOL), 10.6(EOL), 10.7(EOL)
-
None
Description
In the event that mysqlbinlog finishes processing its input logs and did not reach the boundary provided by --stop-position, it should provide a warning. This to facilitate a script/wrapper which can accurately report on the progress of mysqlbinlog.
See PR-1855 for more details.
Attachments
Issue Links
- causes
-
MDEV-35528 mariadb-binlog cannot process more than 1 logfiles when --stop-datetime is specified
-
- Closed
-
-
MDEV-35900 mariadb-binlog reports nonsense warning with --stop-datetime in pitr
-
- Closed
-
- relates to
-
MDEV-30128 remove support for 5.1- replication events
-
- Closed
-
-
MDEV-35694 Mysqlbinlog --stop-position should warn if EOF not reached with --read-from-remote-server
-
- Closed
-
- split from
-
MDEV-26188 Extend mysqlbinlog with argument --progress-log
-
- Closed
-
- split to
-
MDEV-34614 mysqlbinlog warn on EOF before GTID in --stop-position
-
- Closed
-