MDEV-27037 mysqlbinlog emits a warning when reaching EOF before stop-condition

Emit a warning in the event that we finished processing input files
before reaching the boundary indicated by --stop-position.